vlib/v/checker/tests/static_vars_in_translated_mode.out
vlib/v/checker/tests/static_vars_in_translated_mode.vv:2:13: error: static variables are supported only in translated mode or in [unsafe] fn
    1 | fn counter() int {
    2 |     mut static icounter := 0
      |                ~~~~~~~~
    3 |     icounter++
    4 |     return icounter
