vlib/v/checker/tests/static_vars_in_translated_mode.vv
fn counter() int {
	mut static icounter := 0
	icounter++
	return icounter
}

fn main() {
	println(unsafe { counter() })
	println(unsafe { counter() })
	println(unsafe { counter() })
	println(unsafe { counter() })
}
